Better font-size (+ responsibility)

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "abjad",
-	"version": "0.0.0",
+	"version": "1.0.0",
 	"description": "",
 	"keywords": [
 		"ابجد",
-		"حساب جمل",
+		"حساب جُمَّل",
 		"حساب ابجد",
 		"حساب حروف ابجد"
 	],
