--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
 	"name": "abjad",
-	"version": "1.0.1",
-	"description": "",
+	"version": "1.0.3",
+	"description": "محاسبه‌گر اعداد حروف أبجد (حساب جُمَّل) برای واژگان و عبارت‌ها",
 	"keywords": [
 		"ابجد",
-		"حساب جُمَّل",
-		"حساب ابجد",
-		"حساب حروف ابجد"
+		"أبجد",
+		"حساب-جُمَّل",
+		"حساب-الجُمَّل",
+		"حساب-ابجد",
+		"حساب-أبجد",
+		"حساب-حروف-ابجد",
+		"حساب-حروف-أبجد",
+		"abjad",
+		"abjad-numeral",
+		"hisab-al-Jummal"
 	],
 	"repository": {
 		"type": "git",
