--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 	"license": "MIT",
 	"author": "S. Mahdi Mir-Ismaili <s.m.mirismaili@gmail.com>",
 	"type": "module",
-	"main": "main.js",
+	"main": "src/main.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -38,6 +38,6 @@
 		"node": ">=14"
 	},
 	"files": [
-		"main.js"
+		"src"
 	]
 }
