--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "abjad",
-	"version": "1.0.3",
-	"description": "محاسبه‌گر اعداد حروف أبجد (حساب جُمَّل) برای واژگان و عبارت‌ها",
+	"version": "1.0.4",
+	"description": "محاسبه‌گر شمارگان حروف أبجد (حساب جُمَّل) برای واژگان و عبارت‌ها",
 	"keywords": [
 		"ابجد",
 		"أبجد",
