--- a/.editorconfig
+++ b/.editorconfig
@@ -231,9 +231,8 @@ ij_html_quote_style = double
 ij_html_remove_new_line_before_tags = br
 ij_html_space_after_tag_name = false
 ij_html_space_around_equality_in_attribute = false
-ij_html_space_inside_empty_tag = false
+ij_html_space_inside_empty_tag = true
 ij_html_text_wrap = normal
-ij_html_uniform_ident = false
 
 [{*.markdown, *.md}]
 indent_style = space
